apps/bookstore/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    istio.io/rev: asm-1-24
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"key": "reservedFor", "operator": "Equal", "effect": "NoSchedule", "value": "apps"}]'
